# accounter

./: LICENSE  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
app/: .env.example  Dockerfile  analysis_options.yaml  build.yaml  pubspec.yaml
app/android/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  utils.dart
app/lib/data/: db.dart  db.g.dart  models.dart  providers.dart
app/lib/home/: balance_details_screen.dart  history_page.dart  home_screen.dart  monthly_amount.dart  monthly_details_screen.dart  new_balance.dart  top_page.dart
app/lib/pb/: hello.pb.dart  hello.pbgrpc.dart
app/lib/preference/: preference_screen.dart
app/lib/widgets/: error_tile.dart  filled_card.dart  money_icon.dart  outlined_card.dart
app/linux/: CMakeLists.txt  accounter_app.h  main.cc
docs/: .gitignore  package.json  pnpm-lock.yaml
docs/src/: expl.md  index.md
docs/src/.vitepress/: config.ts
ios/Runner/: Info.plist
lib/: main.dart
lib/data/: db.dart  db.g.dart  providers.dart
lib/home/: balance_details_screen.dart  category_amount.dart  history_page.dart  home_screen.dart  monthly_amount.dart  new_balance.dart  top_page.dart
lib/ui/screens/home/: home.dart
lib/ui/widgets/: outlined_card.dart
lib/widgets/: error_tile.dart  my_circular_progress_indicator.dart
linux/: accounter_app.cc
server/: Makefile  pyproject.toml
server/pb/: __init__.pyi  hello_pb2.py  hello_pb2.pyi  hello_pb2_grpc.py
server/server/: __main__.py
test/: widget_test.dart
(+9 files in other folders)
