[project]
name = "server"
version = "0.1.0"
description = "accounter server"
dependencies = [
    "grpcio>=1.56.0",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "grpcio-tools>=1.56.0",
    "protoletariat>=3.2.11",
]

[tool.hatch.metadata]
allow-direct-references = true
